--- a/config/database.yml
+++ b/config/database.yml
@@ -6,13 +6,17 @@
 development:
   adapter: postgresql
   host: localhost
-  username: user
+  port: 5432
+  username: postgres
+  password: d4fg9dpg
   database: app-dev
+  pool: 5
+  
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-development:
+test:
   adapter: postgresql
   host: localhost
   username: user
